styling updates coresponding to wysiwyg

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,27 +1,6 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
-.headings-reset {
-    h1 {
-        font-size: 2.25rem;
-    }
-
-    h2 {
-        font-size: 1.875rem;
-    }
-
-    h3 {
-        font-size: 1.5rem;
-    }
-
-    h4 {
-        font-size: 1.25rem;
-    }
-
-    h5 {
-        font-size: 1.125rem;
-    }
-
-    h6 {
-        font-size: 1rem;
-    }
+.prose-lg a {
+    color: dimgray;
 }
